samples/_failures_safe/1761094608_7ed0db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a10c70f9.c: In function ‘main’:
./samples/SAFE/__tmp_a10c70f9.c:139:13: error: expected declaration or statement at end of input
  139 |             }
      |             ^
./samples/SAFE/__tmp_a10c70f9.c:139:13: error: expected declaration or statement at end of input
